# substrate-chain-sudo-replacement

./: .gitignore  Cargo.toml  run.sh  rust-toolchain.toml
.cargo/: config.toml
pallets/senate-upgrade/: Cargo.toml
pallets/senate-upgrade/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
